--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
